--- a/assets/css/produk.css
+++ b/assets/css/produk.css
@@ -186,6 +186,24 @@ a{
     height: 470px;
 }
 
+.card .img-3{
+    height: 350px;
+}
+
+.card:hover .img-3{
+    height: 450px;
+}
+
+.card .img-4{
+    height: 400px;
+    top: 40%;
+}
+
+.card:hover .img-4{
+    height: 500px;
+    top: 40%;
+}
+
 .card .content{
     position: relative;
     width: 50%;
@@ -269,70 +287,11 @@ a{
     display: block;
 }
 
-/*loading*/
-#loader{
-    margin: 0;
-    padding: 0;
-    background: #fff;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "montserrat",sans-serif;
-}
-.loading{
-    width: 100px;
-    height: 100px;
-    box-sizing: border-box;
-    border-radius: 25%;
-    border-top: 5px solid #e74c3c;
-    position: relative;
-    animation: a1 2s linear infinite;
-}
-.loading::before, .loading::after{
-    content: '';
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    top: -5px;
-    box-sizing: border-box;
-    border-radius: 25%;
-}
-.loading::before{
-    border-top: 5px solid #e67e22;
-    transform: rotate(120deg);
 
-}
-.loading::after{
-    border-top: 5px solid #3498db;
-    transform: rotate(240deg);
-
-}
-.loading span{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    color: #fff;
-    text-align: center;
-    line-height: 100px;
-    animation: a2 2s linear infinite;
-}
-@keyframes a1{
-    to{
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes a2{
-    to{
-        transform: rotate(-360deg);
-    }
-}
 
 /* responsive screen*/
 
-@media(max-width: 991px){
+@media screen and (max-width: 991px){
 
     /*Pricing*/
     .card{
@@ -374,10 +333,19 @@ a{
         left: 50%;
         height: 470px;
     }
+
+    .card:hover .img-3{
+        height: 420px;
+        top: 80%;
+    }
+    
+    .card:hover .img-4{
+        top: 70%;
+    }
 }
 
 
-@media(max-width:550px) {
+@media screen and (max-width:550px) {
     /*Contact*/
       
     .footer-section h6{
@@ -396,7 +364,7 @@ a{
     
 }
 
-@media(max-width:600px) {
+@media screen and (max-width:600px) {
 
     /* banner */
     .header-title {
@@ -404,7 +372,12 @@ a{
     }
 }
 
-@media(max-width: 420px){
+@media screen and (max-width: 420px){
+
+    /* banner */
+    .header-title {
+        font-size: 30px;
+    }
 
     /*Pricing*/
     .card .content{
@@ -416,7 +389,7 @@ a{
     }
 }
 
-@media(max-width:390px) {
+@media screen and (max-width:390px) {
 
     /* banner */
     .header-title {
