--- a/assets/css/story.css
+++ b/assets/css/story.css
@@ -201,70 +201,10 @@ a{
     display: block;
 }
 
-/*loading*/
-#loader{
-    margin: 0;
-    padding: 0;
-    background: #fff;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "montserrat",sans-serif;
-}
-.loading{
-    width: 100px;
-    height: 100px;
-    box-sizing: border-box;
-    border-radius: 25%;
-    border-top: 5px solid #e74c3c;
-    position: relative;
-    animation: a1 2s linear infinite;
-}
-.loading::before, .loading::after{
-    content: '';
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    top: -5px;
-    box-sizing: border-box;
-    border-radius: 25%;
-}
-.loading::before{
-    border-top: 5px solid #e67e22;
-    transform: rotate(120deg);
-
-}
-.loading::after{
-    border-top: 5px solid #3498db;
-    transform: rotate(240deg);
-
-}
-.loading span{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    color: #fff;
-    text-align: center;
-    line-height: 100px;
-    animation: a2 2s linear infinite;
-}
-@keyframes a1{
-    to{
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes a2{
-    to{
-        transform: rotate(-360deg);
-    }
-}
 
 /* responsive screen*/
 
-@media(max-width:991px) {
+@media screen and (max-width:991px) {
     /* about */
     #about {
         display: block;
@@ -283,7 +223,7 @@ a{
     }
 }
 
-@media(max-width:600px) {
+@media screen and(max-width:600px) {
 
     /* banner */
     .header-title {
@@ -291,7 +231,7 @@ a{
     }
 }
 
-@media(max-width:550px) {
+@media screen and (max-width:550px) {
     /*Contact*/
       
     .footer-section h6{
@@ -310,7 +250,7 @@ a{
     
 }
 
-@media(max-width:500px) {
+@media screen and (max-width:500px) {
     /* about */
 
     #about h2{
@@ -328,7 +268,7 @@ a{
 }
 
 
-@media(max-width:390px) {
+@media screen and (max-width:390px) {
 
      /* banner */
      .header-title {
