--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ a{
     position: relative;
     color: #000000;
     padding-top: 5%;
+    padding-bottom: 30px;
 }
 
 .banner .title{
@@ -100,6 +101,7 @@ a{
 /* featured */
 #featured{
     padding: 80px 0;
+    background: rgb(235, 235, 235);
     
 }
 
@@ -111,6 +113,15 @@ a{
     font-weight: 700;
     letter-spacing: 2px;
     font-size: 2rem;
+}
+
+#featured h5{
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-size: 2rem;
+    margin: 20px auto 50px auto;
 }
 
 #featured .title p{
@@ -146,7 +157,7 @@ a{
     text-transform: uppercase;
 }
 
-#featured video{
+#featured  video{
     height: 550px;
     margin: 40px auto 20px auto;
     border-radius: 20px;
@@ -366,7 +377,7 @@ a{
 /* about */
 #about{
     padding: 80px 0;
-    
+    background: rgb(202, 202, 202);
 }
 
 #about h2{
@@ -424,7 +435,7 @@ a{
 /* team */
 #team{
     padding: 80px 0;
-    
+    background: rgb(228, 228, 228);
 }
 
 #team .tengah {
@@ -494,7 +505,7 @@ a{
 /* contact */
 #contact{
     padding: 100px 0px 100px 0px;
-    background: rgb(250, 250, 250);
+    background: #ccc;
 }
 
 .footer{
